<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?android:actionBarSize">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/mainLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/main_label"
            android:layout_marginStart="@dimen/space_16"
            app:layout_constraintBottom_toBottomOf="@+id/mainPlayerSpinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/mainPlayerSpinner" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/mainPlayerSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_16"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@id/mainLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/mainProgress"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/mainPlayerSpinner"
            app:layout_constraintEnd_toEndOf="@+id/mainPlayerSpinner"
            app:layout_constraintStart_toStartOf="@+id/mainPlayerSpinner" />

        <TextView
            android:id="@+id/mainScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_16"
            android:text="@string/main_score_label"
            app:layout_constraintBottom_toBottomOf="@+id/mainScoreEd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/mainScoreEd" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/mainScoreEd"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/space_16"
            android:layout_marginEnd="@dimen/space_16"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/mainPlayerSpinner"
            app:layout_constraintTop_toBottomOf="@+id/mainPlayerSpinner" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/space_24"
            android:background="@color/khaki_web"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mainScoreEd" />

        <TextView
            android:id="@+id/secondLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_16"
            android:text="@string/second_label"
            app:layout_constraintBottom_toBottomOf="@+id/secondPlayerSpinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/secondPlayerSpinner" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/secondPlayerSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_24"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/mainScoreEd"
            app:layout_constraintStart_toStartOf="@+id/mainScoreEd"
            app:layout_constraintTop_toTopOf="@+id/divider" />

        <ProgressBar
            android:id="@+id/secondProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleSmall"
            app:layout_constraintBottom_toBottomOf="@+id/secondLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/secondLabel" />

        <TextView
            android:id="@+id/secondScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_16"
            android:text="@string/second_score_label"
            app:layout_constraintBottom_toBottomOf="@+id/secondScoreEd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/secondScoreEd" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/secondScoreEd"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/space_16"
            android:layout_marginEnd="@dimen/space_16"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/secondPlayerSpinner"
            app:layout_constraintTop_toBottomOf="@+id/secondPlayerSpinner" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/updateMatchButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_24"
            android:layout_marginStart="@dimen/space_16"
            android:layout_marginEnd="@dimen/space_16"
            android:background="@drawable/rounded_button"
            android:text="@string/button_register"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/secondScoreEd"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_16"
            android:background="@drawable/borded_button"
            android:text="@string/button_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/updateMatchButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>